FestinaLenteApp/src/objects/Filter__c.object
<CustomObject>
    <description>Object ids used for filtering. Not persisted.</description>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Filters</relationshipLabel>
        <relationshipName>Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Filters</relationshipLabel>
        <relationshipName>Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Filters</relationshipLabel>
        <relationshipName>ClientFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coach</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Filters (Coach)</relationshipLabel>
        <relationshipName>CoachFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Horse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Horse</label>
        <referenceTo>Horse__c</referenceTo>
        <relationshipLabel>Filters</relationshipLabel>
        <relationshipName>Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShowAvailable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowBooked__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ViewName__c</fullName>
        <label>View Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ViewStart__c</fullName>
        <label>View Start</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Filter</label>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>